# dice_detection

./: README.md  pyproject.toml
conf/base/: logging.yml
docs/source/: conf.py  index.rst
notebooks/: Dice_Detection_OpenCV_Sklearn.ipynb
src/: setup.py
src/dice_detection/: __init__.py  __main__.py  detector.py  model_training.py  models.py  settings.py
src/tests/: test_run.py
