[tool.poetry]
name = "dice_detection"
version = "0.1.0"
description = ""
authors = ["duong <duong@urbanlogiq.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
kedro = "^0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
