[tool.poetry]
name = "dice_detection"
version = "0.1.0"
description = ""
authors = ["duong <duong@urbanlogiq.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
kedro = "^0.18.2"
jupyterlab = "^3.4.4"
opencv-python = "^4.6.0"
numpy = "^1.23.1"
sklearn = "^0.0"
torch = "^1.12.0"
torchvision = "^0.13.0"
torchsummary = "^1.5.1"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
